--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="/transactions/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тест транзакции</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script type="module" crossorigin src="./assets/index.89565283.js"></script>
-    <link rel="stylesheet" href="./assets/index.86cf55ee.css">
+    <script type="module" crossorigin src="/transactions/assets/index.89565283.js"></script>
+    <link rel="stylesheet" href="/transactions/assets/index.86cf55ee.css">
   </head>
   <body>
     <div id="app"></div>
